formLAng/formLAng/grammatica.txt
form CarLoan 
{
	price: "Vehicle price:" money,
	wantLoan: "Do you request a loan?" boolean,
	if (wantLoan) 
	{
		interest: "Interest rate:" real,
		months: "Months" integer,
		payment: "Monthly payment:"	money(price * interest / 1200 / (1-(1+price^-months)))
	}
}


Grammar :

<Form>	::=	`form` Id <Block>

<Block>	::=	`{` <StatementList> `}`	

<StatementList> ::= <Statement> <StatementListHead>	
\alt <Control> <StatementList>			
\alt <empty>

<Control>  ::= `if` `(` <Guard> `)`  <Block>   

<StatementListHead> ::= `,` <StatementListTail>	
\alt	<empty>

<StatementListTail>::= <Statement> <StatementListHead>		
\alt					<Control> <StatementList>		

<Statement>	::=	Id `:` String <Type>			

<Type>	::=	`integer`	<TypeTail>	\alt
			`real`		<TypeTail>	\alt
			`boolean`	<TypeTail>	\alt
			`money`		<TypeTail>	\alt
			`date`		<TypeTail>	\alt
			`string`	<TypeTail>

<TypeTail>	::=	`(`	<Expr>	`)`	
\alt	<empty>

////////////////////////////////////EXTENDED PART/////////////////////////////////

<TypeTail>	::=	`('	<Expr>	`)''	
\alt			`[' <SelectList>	`]' Id	
\alt	<empty>

<SelectList>	::=	<SelectListHead>	<SelectListTail>
\alt	<empty>

<SelectListHead>	::=	<SelectType>	`:'	<SelectType>

<SelectListTail>	::=	`,'	<SelectListHead>	<SelectListTail>	
\alt	<empty>

<SelectType>:	Id		
\alt 		Real	
\alt		Integer	

/////////////////////////////////////////////////////////////////////////////////

<Guard>	::=	<ConditionList>	
\alt	<empty>

<ConditionList>	::=	<Condition>	<ConditionListTail>	
\alt	<empty>

<ConditionListTail>	::=	`&&`	<Condition>	<ConditionList>	
\alt					`||`	<Condition>	<ConditionList>	
\alt	<empty>
								
<Condition>	::=	<ConditionHead> <ConditionTail>

<ConditionHead>	::=	<Expr>		\alt	
					`!`	<Expr>

<ConditionTail>	::=	`<`		<ConditionHead>	
\alt				`>`		<ConditionHead>	
\alt				`<=`	<ConditionHead>	
\alt				`>=`	<ConditionHead>	
\alt				`==`	<ConditionHead>	
\alt				`!=`	<ConditionHead>	
\alt	<empty>

<Expr>	::=	<Term>	<ExprTail>

<ExprTail>	::=	`+`	<Term>	<ExprTail>
\alt			`-`	<Term>	<ExprTail>	
\alt	<empty>

<Term>	::=	<Factor>	<TermTail>

<TermTail>	::=	`*`	<Factor>	<TermTail>	
\alt			`/`	<Factor>	<TermTail>
\alt	<empty>

<Factor>	::=	`(`	<Expr> `)`
\alt		<Num>				
\alt		String			
\alt		Bool			

<Num>	::=	<Base> <NumTail>	
\alt		`-`	<Base> <NumTail>	

<Base> ::=	Integer	
\alt	Real	
\alt	Id

<NumTail>	::=	`^`	<Exponent>	
\alt	<empty>

<Exponent>	::=	`-`	<ExponentTail>	
\alt				<ExponentTail>


<ExponentTail>	::=	Integer	
\alt					Id
